--- a/res/xml/network_traffic.xml
+++ b/res/xml/network_traffic.xml
@@ -19,21 +19,21 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/network_traffic_state_title" >
 
-    <com.aospa.support.preferences.SystemSettingListPreference
+    <com.p404.support.preferences.SystemSettingListPreference
         android:key="network_traffic_location"
         android:title="@string/network_traffic_location_title"
         android:entries="@array/network_traffic_location_entries"
         android:entryValues="@array/network_traffic_location_values"
         android:defaultValue="0" />
         
-   <com.aospa.support.preferences.SystemSettingListPreference
+   <com.p404.support.preferences.SystemSettingListPreference
         android:key="network_traffic_mode"
         android:title="@string/network_traffic_mode_title"
         android:entries="@array/network_traffic_mode_entries"
         android:entryValues="@array/network_traffic_mode_values"
         android:defaultValue="0" />     
 
-    <com.aospa.support.preferences.SystemSettingSeekBarPreference
+    <com.p404.support.preferences.SystemSettingSeekBarPreference
         android:key="network_traffic_autohide_threshold"
         android:title="@string/network_traffic_autohide_threshold_title"
         android:max="10"
@@ -41,7 +41,7 @@
         android:defaultValue="0"
         settings:units="KB/s" />
         
-   <com.aospa.support.preferences.SystemSettingSeekBarPreference
+   <com.p404.support.preferences.SystemSettingSeekBarPreference
         android:key="network_traffic_refresh_interval"
         android:title="@string/network_traffic_refresh_interval_title"
         android:max="10"
