--- a/res/xml/project404_lab.xml
+++ b/res/xml/project404_lab.xml
@@ -16,7 +16,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:title="@string/paranoid_lab_title" >
+    android:title="@string/project404_lab_title" >
     
     <com.android.settingslib.widget.TopIntroPreference
             android:key="pa_illustration_desc"
@@ -32,7 +32,7 @@
           android:key="statusbar_category"
           android:title="@string/statusbar_title" 
           android:summary="@string/statusbar_settings_summary"
-          android:fragment="com.aospa.lab.fragments.StatusBarSettings"
+          android:fragment="com.p404.lab.fragments.StatusBarSettings"
 	      settings:layout="@layout/top_level_card"
           android:icon="@drawable/pa_settings_statusbar"/>
           
@@ -40,7 +40,7 @@
           android:key="quicksettings_category"
           android:title="@string/quicksettings_title" 
           android:summary="@string/qs_panel_settings_summary"
-          android:fragment="com.aospa.lab.fragments.QuickSettings"
+          android:fragment="com.p404.lab.fragments.QuickSettings"
 	      settings:layout="@layout/top_level_card"
           android:icon="@drawable/pa_settings_quicksettings"/>
           
@@ -69,7 +69,7 @@
           android:key="lockscreen_category"
           android:title="@string/lockscreen_title" 
           android:summary="@string/lockscreen_settings_summary"
-          android:fragment="com.aospa.lab.fragments.LockScreenSettings"
+          android:fragment="com.p404.lab.fragments.LockScreenSettings"
 	      settings:layout="@layout/top_level_card"
           android:icon="@drawable/pa_settings_lockscreens"/>
           
@@ -77,7 +77,7 @@
           android:key="misc_category"
           android:title="@string/misc_title"
           android:summary="@string/misc_settings_summary"
-          android:fragment="com.aospa.lab.fragments.MiscSettings"
+          android:fragment="com.p404.lab.fragments.MiscSettings"
 	      settings:layout="@layout/top_level_card"
           android:icon="@drawable/pa_settings_miscs"/>      
 
