--- a/res/xml/quicksettings.xml
+++ b/res/xml/quicksettings.xml
@@ -19,14 +19,14 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
     
     <!-- qs brightness customization -->
-        <com.aospa.support.preferences.SecureSettingMasterSwitchPreference
+        <com.p404.support.preferences.SecureSettingMasterSwitchPreference
             android:key="qs_show_brightness"
             android:title="@string/qs_show_brightness_title"
             android:summary="@string/qs_show_brightness_summary"
-            android:fragment="com.aospa.lab.fragments.BrightnessSliderSettings"
+            android:fragment="com.p404.lab.fragments.BrightnessSliderSettings"
             android:defaultValue="true" />
     
-    <com.aospa.support.preferences.SecureSettingSwitchPreference
+    <com.p404.support.preferences.SecureSettingSwitchPreference
         android:key="status_bar_quick_qs_pulldown"
         android:title="@string/quick_settings_quick_pull_down_title"
         android:summary="@string/quick_settings_quick_pull_down_summary"
