--- a/res/xml/statusbar_settings_brightness_slider.xml
+++ b/res/xml/statusbar_settings_brightness_slider.xml
@@ -15,13 +15,13 @@
     android:title="@string/qs_show_brightness_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <com.aospa.support.preferences.SecureSettingSwitchPreference
+    <com.p404.support.preferences.SecureSettingSwitchPreference
         android:key="qs_brightness_position_bottom"
         android:title="@string/qs_brightness_position_bottom_title"
         android:summary="@string/qs_brightness_position_bottom_summary"
         android:defaultValue="false" />
         
-   <com.aospa.support.preferences.SecureSettingSwitchPreference
+   <com.p404.support.preferences.SecureSettingSwitchPreference
         android:key="qs_show_auto_brightness_button"
         android:title="@string/qs_show_auto_brightness_title"
         android:summary="@string/qs_show_auto_brightness_summary"
