--- a/res/xml/lockscreen.xml
+++ b/res/xml/lockscreen.xml
@@ -18,4 +18,10 @@
     android:title="@string/lockscreen_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <co.p404.support.preferences.SystemSettingSwitchPreference
+        android:key="disable_ripple_effect"
+        android:title="@string/disable_fingerprint_ripple_effect_title"
+        android:summary="@string/disable_fingerprint_ripple_effect_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
